Hide ourselves from stack trace